# utxo-global-multi-sig-api

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  config.toml  rustfmt.toml
.github/: develop.yaml  release.yaml
.github/workflows/: ci.yml  develop.yaml  release.yaml
k8s/: Dockerfile  Dockerfile.binary
migrations/: 20240310125421_init.sql  20240716020013_multi-sig-account.sql  20240802033419_users.sql  20240805035022_address_books.sql  20240805035033_invites.sql  20240813112003_transations.sql  20240821100100_bounty_contest.sql  20240902041652_alter_multisig_address.sql
src/: app.rs  main.rs
src/handlers/: address_book.rs  bounty_contest.rs  ckb_explorer.bk  ckb_explorer.rs  jwt.rs  mod.rs  multi_sig_account.rs  user.rs
src/models/: address_book.rs  bounty_contest.rs  mod.rs  multi_sig_account.rs  multi_sig_invite.rs  multi_sig_tx.rs  user.rs
src/repositories/: address_book.rs  bounty_contest.rs  ckb.rs  db.rs  mod.rs  multi_sig_account.rs  user.rs
src/serialize/: address_book.rs  bounty_contest.rs  error.rs  mod.rs  multi_sig_account.rs  transaction.rs  user.rs
src/services/: address_book.rs  bounty_contest.rs  constants.rs  mod.rs  multi_sig_account.rs  overrided.rs  user.rs
