[package]
name = "utxo-global-multi-sig-api"
version = "0.1.0"
edition = "2021"
default-run = "app"

[[bin]]
name = "test_address"
test = false
bench = false

[[bin]]
name = "test_multisign"
test = false
bench = false

[[bin]]
name = "test_flow"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
base64 = "0.21.7"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
ethers = { version = "2.0.13" }
tokio = { version = "1", features = ["full"] }
r2d2 = "0.8.10"
rand = "0.8.5"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
once_cell = "1.19.0"
config = "0.14.0"
actix-cors = "0.7.0"
jsonwebtoken = "9.2.0"
simple_crypt = "0.2.3"
getrandom = "0.2.12"
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
deadpool-postgres = { version = "0.12.1", features = ["serde"] }
tokio-pg-mapper = { version = "0.2.0", features = ["tokio-pg-mapper-derive"] }
tokio-pg-mapper-derive = "0.2.0"
ckb-sdk = "3.2.1"
ckb-types = "0.116.1"
ckb-jsonrpc-types = "0.116.1"
anyhow = "1.0.86"
hex = "0.4.3"
log = "0.4.22"
openssl = { version = "0.10.64", features = ["vendored"] }
